the fix changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
             }
         </style>
     </head>
+    <title>{% block title %}{% endblock %}</title>
     <header>
     <div class = 'container'>
     <ul class="nav nav-pills">
