--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for = 'nickname'>你的名字（昵称）:</label>
-                    <input id = 'nickname' name = 'nickname' type = 'text' required>
+                    <input id = 'nickname' name = 'nickname' type = 'text' required class='rounded'>
                     <br>
                     <label for = 'comment'>留言:</label>
                     <textarea class="form-control" id = 'comment' name = 'comment' rows = '8' required></textarea>
